Changes in BradleyTerry 0.9-4
=============================

New Features
------------

    o	added ice hockey example presented at useR! 2010

Bug fixes
---------

    o	predict.BTM now works for models with no random effects


Changes in BradleyTerry 0.9-3
=============================

New Features
------------

    o	added predict method for BTm objects.

Bug fixes
---------

    o	fixed bug in BTm.setup causing problems in finding variables when BTm
    nested within another function.