@@ -1,6 +1,6 @@
 Package: BradleyTerry2
 Version: 0.9-4
-Date: 2010-10-05
+Date: 2010-10-11
 Title: Bradley-Terry models
 Author: Heather Turner and David Firth
 Maintainer: Heather Turner <heather.turner@warwick.ac.uk>
