@@ -1,6 +1,6 @@
 
-R version 2.10.1 (2009-12-14)
-Copyright (C) 2009 The R Foundation for Statistical Computing
+R version 2.11.1 Patched (2010-09-30 r53083)
+Copyright (C) 2010 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -34,81 +34,81 @@ BTm(outcome = result, player1 = winner, player2 = loser, data = contests,
 Coefficients: (3 not defined because of singularities)
             Estimate Std. Error z value Pr(>|z|)
 ..lizard005 -1.20504    4.64604  -0.259    0.795
-..lizard006 -2.87103    5.92260  -0.485    0.628
-..lizard009  0.07957    6.18265   0.013    0.990
-..lizard010 -1.93866    5.37451  -0.361    0.718
+..lizard006 -2.87102    5.92260  -0.485    0.628
+..lizard009  0.07954    6.18264   0.013    0.990
+..lizard010 -1.93865    5.37451  -0.361    0.718
 ..lizard011 -1.09861    2.30940  -0.476    0.634
-..lizard012 -0.63845    3.23535  -0.197    0.844
-..lizard013 -3.30572    5.59110  -0.591    0.554
+..lizard012 -0.63844    3.23535  -0.197    0.844
+..lizard013 -3.30570    5.59109  -0.591    0.554
 ..lizard016  1.18331    2.81899   0.420    0.675
-..lizard018 -1.56565    2.23667  -0.700    0.484
+..lizard018 -1.56565    2.23668  -0.700    0.484
 ..lizard020 -0.16014    3.70684  -0.043    0.966
-..lizard023  0.88994    3.02459   0.294    0.769
+..lizard023  0.88994    3.02460   0.294    0.769
 ..lizard024 -1.09861    2.30940  -0.476    0.634
 ..lizard025 -1.80638    5.91307  -0.305    0.760
 ..lizard026 -2.19722    3.26599  -0.673    0.501
 ..lizard028 -1.20504    3.30440  -0.365    0.715
 ..lizard029 -1.25875    2.89954  -0.434    0.664
 ..lizard030  0.46017    3.97502   0.116    0.908
-..lizard031 -2.81449    5.02733  -0.560    0.576
-..lizard032 -2.01124    3.72650  -0.540    0.589
-..lizard033 -1.77261    5.21192  -0.340    0.734
+..lizard031 -2.81448    5.02733  -0.560    0.576
+..lizard032 -2.01126    3.72650  -0.540    0.589
+..lizard033 -1.77260    5.21192  -0.340    0.734
 ..lizard037 -2.90499    5.44344  -0.534    0.594
-..lizard038 -0.06225    3.15354  -0.020    0.984
-..lizard040  0.40386    2.53760   0.159    0.874
-..lizard045 -0.87041    2.70991  -0.321    0.748
+..lizard038 -0.06226    3.15354  -0.020    0.984
+..lizard040  0.40386    2.53759   0.159    0.874
+..lizard045 -0.87040    2.70991  -0.321    0.748
 ..lizard047 -1.09861    2.30940  -0.476    0.634
-..lizard048 -1.77242    5.45379  -0.325    0.745
-..lizard050 -2.01124    3.72650  -0.540    0.589
-..lizard052 -0.91263    2.92463  -0.312    0.755
+..lizard048 -1.77241    5.45379  -0.325    0.745
+..lizard050 -2.01126    3.72650  -0.540    0.589
+..lizard052 -0.91265    2.92463  -0.312    0.755
 ..lizard053       NA         NA      NA       NA
-..lizard055 -1.06807    3.42732  -0.312    0.755
+..lizard055 -1.06806    3.42732  -0.312    0.755
 ..lizard058       NA         NA      NA       NA
 ..lizard060       NA         NA      NA       NA
-..lizard061 -1.09708    1.99579  -0.550    0.583
-..lizard062 -2.30366    4.03142  -0.571    0.568
+..lizard061 -1.09709    1.99579  -0.550    0.583
+..lizard062 -2.30365    4.03142  -0.571    0.568
 ..lizard063 -0.20867    3.80546  -0.055    0.956
-..lizard064 -0.17068    3.41077  -0.050    0.960
+..lizard064 -0.17068    3.41076  -0.050    0.960
 ..lizard065 -1.71587    5.53240  -0.310    0.756
 ..lizard066  0.60941    3.38727   0.180    0.857
-..lizard069 -3.48951    5.11390  -0.682    0.495
-..lizard070  2.60120    4.26202   0.610    0.542
+..lizard069 -3.48952    5.11390  -0.682    0.495
+..lizard070  2.60118    4.26202   0.610    0.542
 ..lizard071 -2.39090    5.61117  -0.426    0.670
 ..lizard073 -0.88783    5.10580  -0.174    0.862
-..lizard074 -1.01904    5.73513  -0.178    0.859
+..lizard074 -1.01907    5.73513  -0.178    0.859
 ..lizard075 -2.30402    4.03795  -0.571    0.568
-..lizard077 -0.79510    2.69015  -0.296    0.768
+..lizard077 -0.79512    2.69015  -0.296    0.768
 ..lizard078 -1.20541    3.31235  -0.364    0.716
-..lizard081 -1.96902    3.56047  -0.553    0.580
-..lizard082 -2.74006    5.45022  -0.503    0.615
+..lizard081 -1.96901    3.56047  -0.553    0.580
+..lizard082 -2.74005    5.45022  -0.503    0.615
 ..lizard083  0.49147    2.93949   0.167    0.867
-..lizard084 -1.77959    3.02373  -0.589    0.556
-..lizard086 -2.32338    5.03754  -0.461    0.645
-..lizard089 -3.87138    5.57733  -0.694    0.488
-..lizard091 -3.31612    5.34283  -0.621    0.535
-..lizard096 -0.74848    5.56137  -0.135    0.893
-..lizard099  0.40398    2.73827   0.148    0.883
+..lizard084 -1.77958    3.02372  -0.589    0.556
+..lizard086 -2.32337    5.03754  -0.461    0.645
+..lizard089 -3.87134    5.57733  -0.694    0.488
+..lizard091 -3.31611    5.34283  -0.621    0.535
+..lizard096 -0.74847    5.56137  -0.135    0.893
+..lizard099  0.40395    2.73827   0.148    0.883
 ..lizard100 -1.98644    5.60380  -0.354    0.723
-..lizard102 -1.87039    5.46050  -0.343    0.732
-..lizard105 -0.64266    3.12023  -0.206    0.837
+..lizard102 -1.87040    5.46050  -0.343    0.732
+..lizard105 -0.64268    3.12023  -0.206    0.837
 ..lizard155 -0.99809    3.10453  -0.321    0.748
-..lizard156 -0.51136    3.21642  -0.159    0.874
+..lizard156 -0.51137    3.21642  -0.159    0.874
 ..lizard162  0.08470    3.64418   0.023    0.981
 ..lizard163 -0.69475    3.43114  -0.202    0.840
-..lizard165 -1.26930    4.11906  -0.308    0.758
+..lizard165 -1.26929    4.11906  -0.308    0.758
 ..lizard167 -1.20541    3.31235  -0.364    0.716
-..lizard170  0.58725    2.23875   0.262    0.793
-..lizard171  1.50259    4.84749   0.310    0.757
+..lizard170  0.58724    2.23875   0.262    0.793
+..lizard171  1.50256    4.84748   0.310    0.757
 ..lizard173 -0.90491    2.56217  -0.353    0.724
-..lizard174  1.50259    3.58210   0.419    0.675
+..lizard174  1.50256    3.58210   0.419    0.675
 ..lizard176  0.46631    2.73577   0.170    0.865
-..lizard177  0.03054    2.53242   0.012    0.990
+..lizard177  0.03055    2.53242   0.012    0.990
 ..lizard178 -1.16087    3.90873  -0.297    0.766
 ..lizard179 -0.48920    2.47796  -0.197    0.843
 ..lizard180 -1.32131    2.10455  -0.628    0.530
-..lizard183 -1.06807    3.42732  -0.312    0.755
-..lizard188 -1.86502    3.18218  -0.586    0.558
-..lizard189 -1.93330    3.30198  -0.585    0.558
+..lizard183 -1.06806    3.42732  -0.312    0.755
+..lizard188 -1.86501    3.18217  -0.586    0.558
+..lizard189 -1.93331    3.30198  -0.585    0.558
 
 (Dispersion parameter for binomial family taken to be 1)
 
@@ -355,7 +355,7 @@ lizard084 -0.37501960 2.736330e-01
 lizard086  0.43640313 4.175232e-01
 lizard089  0.46797083 2.034885e-01
 lizard091  0.76536589 2.617811e-01
-lizard096 20.46403120 3.874532e+07
+lizard096 20.46394884 3.874532e+07
 lizard099  0.59769876 7.377477e-01
 lizard100 -0.82767319 2.606270e-01
 lizard102 -0.67042627 3.511878e-01
